// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace migration builder field actions test suite It should NOT build an update_field action for a field RELATION uncovered fields mutation 1`] = `[]`;

exports[`Workspace migration builder field actions test suite It should build a delete_field action 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<String>,
      "defaultValue": null,
      "description": "default flat field metadata description",
      "flatRelationTargetFieldMetadata": null,
      "flatRelationTargetObjectMetadata": null,
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUIReadOnly": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "morphId": null,
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": null,
      "relationTargetFieldMetadataId": null,
      "relationTargetObjectMetadataId": null,
      "settings": null,
      "standardId": null,
      "standardOverrides": null,
      "type": "TEXT",
      "universalIdentifier": Any<String>,
      "updatedAt": Any<String>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action for a RELATION field 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<String>,
      "defaultValue": null,
      "description": "default flat field metadata description",
      "flatRelationTargetFieldMetadata": {
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "default flat field metadata description",
        "icon": "icon",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "label": "flat field metadata label",
        "morphId": null,
        "name": "flatFieldMetadataName",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "joinColumnName": "sourceWhatever",
          "onDelete": undefined,
          "relationType": "ONE_TO_MANY",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "workspaceId": Any<String>,
      },
      "flatRelationTargetObjectMetadata": {
        "createdAt": Any<String>,
        "description": "A rocket",
        "duplicateCriteria": null,
        "icon": "IconRocket",
        "id": Any<String>,
        "imageIdentifierFieldMetadataId": null,
        "isActive": true,
        "isAuditLogged": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isRemote": false,
        "isSearchable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "labelIdentifierFieldMetadataId": Any<String>,
        "labelPlural": "Rockets",
        "labelSingular": "Rocket",
        "namePlural": "rockets",
        "nameSingular": "rocket",
        "shortcut": null,
        "standardId": null,
        "standardOverrides": null,
        "targetTableName": "DEPRECATED",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "workspaceId": Any<String>,
      },
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUIReadOnly": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "morphId": null,
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": null,
      "relationTargetFieldMetadataId": Any<String>,
      "relationTargetObjectMetadataId": Any<String>,
      "settings": {
        "joinColumnName": "whatever",
        "onDelete": undefined,
        "relationType": "MANY_TO_ONE",
      },
      "standardId": null,
      "standardOverrides": null,
      "type": "RELATION",
      "universalIdentifier": Any<String>,
      "updatedAt": Any<String>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
  {
    "flatFieldMetadata": {
      "createdAt": Any<String>,
      "defaultValue": null,
      "description": "default flat field metadata description",
      "flatRelationTargetFieldMetadata": {
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "default flat field metadata description",
        "flatRelationTargetObjectMetadata": {
          "createdAt": Any<String>,
          "description": "A rocket",
          "duplicateCriteria": null,
          "icon": "IconRocket",
          "id": Any<String>,
          "imageIdentifierFieldMetadataId": null,
          "isActive": true,
          "isAuditLogged": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "labelIdentifierFieldMetadataId": Any<String>,
          "labelPlural": "Rockets",
          "labelSingular": "Rocket",
          "namePlural": "rockets",
          "nameSingular": "rocket",
          "shortcut": null,
          "standardId": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "icon": "icon",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "label": "flat field metadata label",
        "morphId": null,
        "name": "flatFieldMetadataName",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "joinColumnName": "whatever",
          "onDelete": undefined,
          "relationType": "MANY_TO_ONE",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "workspaceId": Any<String>,
      },
      "flatRelationTargetObjectMetadata": {
        "createdAt": Any<String>,
        "description": null,
        "duplicateCriteria": null,
        "icon": "IconCat",
        "id": Any<String>,
        "imageIdentifierFieldMetadataId": null,
        "isActive": true,
        "isAuditLogged": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isRemote": false,
        "isSearchable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "labelIdentifierFieldMetadataId": Any<String>,
        "labelPlural": "Pets",
        "labelSingular": "Pet",
        "namePlural": "pets",
        "nameSingular": "pet",
        "shortcut": null,
        "standardId": null,
        "standardOverrides": null,
        "targetTableName": "DEPRECATED",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "workspaceId": Any<String>,
      },
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUIReadOnly": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "morphId": null,
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": null,
      "relationTargetFieldMetadataId": Any<String>,
      "relationTargetObjectMetadataId": Any<String>,
      "settings": {
        "joinColumnName": "sourceWhatever",
        "onDelete": undefined,
        "relationType": "ONE_TO_MANY",
      },
      "standardId": null,
      "standardOverrides": null,
      "type": "RELATION",
      "universalIdentifier": Any<String>,
      "updatedAt": Any<String>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for a RELATION field 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "update_field",
    "updates": [
      {
        "from": null,
        "property": "description",
        "to": "new description",
      },
      {
        "from": "Species",
        "property": "label",
        "to": "new label",
      },
    ],
    "workspaceId": Any<String>,
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for custom fields 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "update_field",
    "updates": [
      {
        "from": null,
        "property": "description",
        "to": "new description",
      },
      {
        "from": null,
        "property": "icon",
        "to": "new icon",
      },
    ],
    "workspaceId": Any<String>,
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for standard field 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "update_field",
    "updates": [
      {
        "from": null,
        "property": "standardOverrides",
        "to": {
          "description": "new description",
          "icon": "new icon",
        },
      },
    ],
    "workspaceId": Any<String>,
  },
]
`;

exports[`Workspace migration builder field actions test suite It should not infer any actions as from and to fields are identical 1`] = `[]`;

exports[`Workspace migration builder index actions test suite It should build a delete_index action 1`] = `
[
  {
    "flatIndexMetadataId": Any<String>,
    "type": "delete_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should build an create_index action 1`] = `
[
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "universalIdentifier": Any<String>,
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should build an delete_index and a create_index action ( the way we handle update ) 1`] = `
[
  {
    "flatIndexMetadataId": Any<String>,
    "type": "delete_index",
  },
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": "new index where clause",
      "isCustom": false,
      "isUnique": false,
      "name": "new index name",
      "objectMetadataId": Any<String>,
      "universalIdentifier": Any<String>,
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should not infer any actions as from and to indexes are identical 1`] = `[]`;

exports[`Workspace migration builder object actions test suite It should build a create_object action with custom object 1`] = `
[
  {
    "createFieldActions": [
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "uuid",
          "description": "Id",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "Icon123",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Id",
          "morphId": null,
          "name": "id",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "UUID",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "'Untitled'",
          "description": "Name",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconAbc",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Name",
          "morphId": null,
          "name": "name",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "now",
          "description": "Creation date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendar",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Creation date",
          "morphId": null,
          "name": "createdAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "now",
          "description": "Last time the record was changed",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Last update",
          "morphId": null,
          "name": "updatedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Deletion date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Deleted at",
          "morphId": null,
          "name": "deletedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "name": "''",
            "source": "'MANUAL'",
          },
          "description": "The creator of the record",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCreativeCommonsSa",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Created by",
          "morphId": null,
          "name": "createdBy",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "ACTOR",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": 0,
          "description": "Position",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHierarchy2",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Position",
          "morphId": null,
          "name": "position",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "POSITION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "TimelineActivities Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconTimelineEvent",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "TimelineActivities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Favorites tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Favorites Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHeart",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Favorites",
          "morphId": null,
          "name": "favorites",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Attachments Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconFileImport",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "NoteTargets Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "NoteTargets",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "TaskTargets Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "TaskTargets",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Field used for full-text search",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": false,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Search vector",
          "morphId": null,
          "name": "searchVector",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TS_VECTOR",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
    ],
    "flatObjectMetadataWithoutFields": {
      "createdAt": Any<String>,
      "description": "A rocket",
      "duplicateCriteria": null,
      "icon": "IconRocket",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": null,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "isUIReadOnly": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "Rockets",
      "labelSingular": "Rocket",
      "namePlural": "rockets",
      "nameSingular": "rocket",
      "shortcut": null,
      "standardId": null,
      "standardOverrides": null,
      "targetTableName": "DEPRECATED",
      "universalIdentifier": Any<String>,
      "updatedAt": Any<String>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a create_object action with standard object 1`] = `
[
  {
    "createFieldActions": [
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets tied to the Pet",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "NoteTargets Pet",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Pet",
            "morphId": null,
            "name": "pet",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "petId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "NoteTargets",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "uuid",
          "description": "Id",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "Icon123",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Id",
          "morphId": null,
          "name": "id",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "UUID",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "'Untitled'",
          "description": "Name",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconAbc",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Name",
          "morphId": null,
          "name": "name",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "now",
          "description": "Creation date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendar",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Creation date",
          "morphId": null,
          "name": "createdAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "now",
          "description": "Last time the record was changed",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Last update",
          "morphId": null,
          "name": "updatedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Deletion date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Deleted at",
          "morphId": null,
          "name": "deletedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "name": "''",
            "source": "'MANUAL'",
          },
          "description": "The creator of the record",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCreativeCommonsSa",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Created by",
          "morphId": null,
          "name": "createdBy",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "ACTOR",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": 0,
          "description": "Position",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHierarchy2",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Position",
          "morphId": null,
          "name": "position",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "POSITION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities tied to the Pet",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "TimelineActivities Pet",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Pet",
            "morphId": null,
            "name": "pet",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "petId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconTimelineEvent",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "TimelineActivities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Favorites tied to the Pet",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Favorites Pet",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Pet",
            "morphId": null,
            "name": "pet",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "petId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHeart",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Favorites",
          "morphId": null,
          "name": "favorites",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments tied to the Pet",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Attachments Pet",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Pet",
            "morphId": null,
            "name": "pet",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "petId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconFileImport",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets tied to the Pet",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "TaskTargets Pet",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Pet",
            "morphId": null,
            "name": "pet",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "petId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "TaskTargets",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Field used for full-text search",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": false,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Search vector",
          "morphId": null,
          "name": "searchVector",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TS_VECTOR",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Species",
          "morphId": null,
          "name": "species",
          "objectMetadataId": Any<String>,
          "options": [
            {
              "color": "blue",
              "id": Any<String>,
              "label": "Dog",
              "position": 0,
              "value": "DOG",
            },
            {
              "color": "red",
              "id": Any<String>,
              "label": "Cat",
              "position": 1,
              "value": "CAT",
            },
            {
              "color": "green",
              "id": Any<String>,
              "label": "Bird",
              "position": 2,
              "value": "BIRD",
            },
            {
              "color": "yellow",
              "id": Any<String>,
              "label": "Fish",
              "position": 3,
              "value": "FISH",
            },
            {
              "color": "purple",
              "id": Any<String>,
              "label": "Rabbit",
              "position": 4,
              "value": "RABBIT",
            },
            {
              "color": "orange",
              "id": Any<String>,
              "label": "Hamster",
              "position": 5,
              "value": "HAMSTER",
            },
          ],
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "SELECT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Traits",
          "morphId": null,
          "name": "traits",
          "objectMetadataId": Any<String>,
          "options": [
            {
              "color": "blue",
              "id": Any<String>,
              "label": "Playful",
              "position": 0,
              "value": "PLAYFUL",
            },
            {
              "color": "red",
              "id": Any<String>,
              "label": "Friendly",
              "position": 1,
              "value": "FRIENDLY",
            },
            {
              "color": "green",
              "id": Any<String>,
              "label": "Protective",
              "position": 2,
              "value": "PROTECTIVE",
            },
            {
              "color": "yellow",
              "id": Any<String>,
              "label": "Shy",
              "position": 3,
              "value": "SHY",
            },
            {
              "color": "purple",
              "id": Any<String>,
              "label": "Brave",
              "position": 4,
              "value": "BRAVE",
            },
            {
              "color": "orange",
              "id": Any<String>,
              "label": "Curious",
              "position": 5,
              "value": "CURIOUS",
            },
          ],
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "MULTI_SELECT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "''",
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Comments",
          "morphId": null,
          "name": "comments",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Age",
          "morphId": null,
          "name": "age",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "NUMBER",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "addressCity": "''",
            "addressCountry": "''",
            "addressLat": null,
            "addressLng": null,
            "addressPostcode": "''",
            "addressState": "''",
            "addressStreet1": "''",
            "addressStreet2": "''",
          },
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Location",
          "morphId": null,
          "name": "location",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "ADDRESS",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "additionalPhones": null,
            "primaryPhoneCallingCode": "''",
            "primaryPhoneCountryCode": "''",
            "primaryPhoneNumber": "''",
          },
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Vet phone",
          "morphId": null,
          "name": "vetPhone",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "PHONES",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "additionalEmails": null,
            "primaryEmail": "''",
          },
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Vet email",
          "morphId": null,
          "name": "vetEmail",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "EMAILS",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Birthday",
          "morphId": null,
          "name": "birthday",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "DATE",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Is good with kids",
          "morphId": null,
          "name": "isGoodWithKids",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "BOOLEAN",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "primaryLinkLabel": "''",
            "primaryLinkUrl": "''",
            "secondaryLinks": [],
          },
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Pictures",
          "morphId": null,
          "name": "pictures",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "LINKS",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "amountMicros": null,
            "currencyCode": "''",
          },
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Average cost of kibble per month",
          "morphId": null,
          "name": "averageCostOfKibblePerMonth",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "CURRENCY",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "firstName": "''",
            "lastName": "''",
          },
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Makes its owner think of",
          "morphId": null,
          "name": "makesOwnerThinkOf",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "FULL_NAME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Sound swag (bark style, meow style, etc.)",
          "morphId": null,
          "name": "soundSwag",
          "objectMetadataId": Any<String>,
          "options": [
            {
              "id": Any<String>,
              "label": "1",
              "position": 0,
              "value": "RATING_1",
            },
            {
              "id": Any<String>,
              "label": "2",
              "position": 1,
              "value": "RATING_2",
            },
            {
              "id": Any<String>,
              "label": "3",
              "position": 2,
              "value": "RATING_3",
            },
            {
              "id": Any<String>,
              "label": "4",
              "position": 3,
              "value": "RATING_4",
            },
            {
              "id": Any<String>,
              "label": "5",
              "position": 4,
              "value": "RATING_5",
            },
          ],
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "RATING",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Bio",
          "morphId": null,
          "name": "bio",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "RICH_TEXT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Interesting facts",
          "morphId": null,
          "name": "interestingFacts",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "ARRAY",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Extra data",
          "morphId": null,
          "name": "extraData",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": null,
          "standardOverrides": null,
          "type": "RAW_JSON",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
    ],
    "flatObjectMetadataWithoutFields": {
      "createdAt": Any<String>,
      "description": null,
      "duplicateCriteria": null,
      "icon": "IconCat",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": null,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "isUIReadOnly": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "Pets",
      "labelSingular": "Pet",
      "namePlural": "pets",
      "nameSingular": "pet",
      "shortcut": null,
      "standardId": null,
      "standardOverrides": null,
      "targetTableName": "DEPRECATED",
      "universalIdentifier": Any<String>,
      "updatedAt": Any<String>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a create_object and create_index actions for each of this fieldMetadata 1`] = `
[
  {
    "createFieldActions": [
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "uuid",
          "description": "Id",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "Icon123",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Id",
          "morphId": null,
          "name": "id",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "UUID",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "'Untitled'",
          "description": "Name",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconAbc",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Name",
          "morphId": null,
          "name": "name",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "now",
          "description": "Creation date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendar",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Creation date",
          "morphId": null,
          "name": "createdAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": "now",
          "description": "Last time the record was changed",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Last update",
          "morphId": null,
          "name": "updatedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Deletion date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Deleted at",
          "morphId": null,
          "name": "deletedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": {
            "name": "''",
            "source": "'MANUAL'",
          },
          "description": "The creator of the record",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCreativeCommonsSa",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Created by",
          "morphId": null,
          "name": "createdBy",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "ACTOR",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": 0,
          "description": "Position",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHierarchy2",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Position",
          "morphId": null,
          "name": "position",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "POSITION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "TimelineActivities Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconTimelineEvent",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "TimelineActivities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Favorites tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Favorites Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHeart",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Favorites",
          "morphId": null,
          "name": "favorites",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Attachments Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconFileImport",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "NoteTargets Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "NoteTargets",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "TaskTargets Rocket",
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Rocket",
            "morphId": null,
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "TaskTargets",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Field used for full-text search",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": false,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUIReadOnly": false,
          "isUnique": false,
          "label": "Search vector",
          "morphId": null,
          "name": "searchVector",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TS_VECTOR",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
    ],
    "flatObjectMetadataWithoutFields": {
      "createdAt": Any<String>,
      "description": "A rocket",
      "duplicateCriteria": null,
      "icon": "IconRocket",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": null,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "isUIReadOnly": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "Rockets",
      "labelSingular": "Rocket",
      "namePlural": "rockets",
      "nameSingular": "rocket",
      "shortcut": null,
      "standardId": null,
      "standardOverrides": null,
      "targetTableName": "DEPRECATED",
      "universalIdentifier": Any<String>,
      "updatedAt": Any<String>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "universalIdentifier": Any<String>,
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a delete_object action with custom deactivated object 1`] = `
[
  {
    "objectMetadataId": Any<String>,
    "type": "delete_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a delete_object action with standard activated object 1`] = `
[
  {
    "objectMetadataId": Any<String>,
    "type": "delete_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build an update_object for custom object 1`] = `
[
  {
    "objectMetadataId": Any<String>,
    "type": "update_object",
    "updates": [
      {
        "from": "pets",
        "property": "namePlural",
        "to": "prastoins",
      },
      {
        "from": "pet",
        "property": "nameSingular",
        "to": "prastouin",
      },
    ],
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build an update_object for standard object 1`] = `
[
  {
    "objectMetadataId": Any<String>,
    "type": "update_object",
    "updates": [
      {
        "from": null,
        "property": "standardOverrides",
        "to": {
          "description": "Updated description",
        },
      },
    ],
  },
]
`;

exports[`Workspace migration builder object actions test suite It should not infer any actions as from and to are identical 1`] = `[]`;
